force-app/main/default/objects/BANK_BALANCE__c/BANK_BALANCE__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_BankBalanceOnlineHelp</customHelpPage>
    <label>BANK BALANCE</label>
    <nameField>
        <displayFormat>BB-{000000}</displayFormat>
        <label>BANK BALANCE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>