force-app/main/default/objects/BANK_BALANCE__c/fields/AMOUNT_PAID_USD_NOT_IN_H_BL__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT_PAID_USD_NOT_IN_H_BL__c</fullName>
    <inlineHelpText>Enter Total USD Amount paid to vendor in case the payment is not registered in H B/L Invoice(Selling/Buying).</inlineHelpText>
    <label>AMOUNT PAID-USD(NOT IN H BL)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>