force-app/main/default/objects/BANK_BALANCE__c/fields/AMOUNT_RECEIVED_NOT_IN_H_BL__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT_RECEIVED_NOT_IN_H_BL__c</fullName>
    <inlineHelpText>Enter Total Local Currency Amount received from customers in case the receiptance is not registered in H B/L Invoice(Selling/Buying).</inlineHelpText>
    <label>AMOUNT RECEIVED(NOT IN H BL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>