force-app/main/default/objects/BANK_BALANCE__c/fields/AMOUNT_RECEIVED_USD_IN_H_BL__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT_RECEIVED_USD_IN_H_BL__c</fullName>
    <inlineHelpText>Enter Total USD Amount received from customers in case the receiptance is registered in H B/L Invoice(Selling/Buying)</inlineHelpText>
    <label>AMOUNT RECEIVED-USD(IN H BL)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>