force-app/main/default/objects/BANK_BALANCE__c/fields/BALANCE_AT_CLOSING__c.field-meta.xml
<CustomField>
    <fullName>BALANCE_AT_CLOSING__c</fullName>
    <formula>BALANCE_AT_START__c +  AMOUNT_RECEIVED_IN_H_BL__c  +  AMOUNT_RECEIVED_NOT_IN_H_BL__c  -  AMOUNT_PAID_IN_H_BL__c  -  AMOUNT_PAID_NOT_IN_H_BL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The value is automatically calculated as below.
Balance at Closing=Balance at Start+Amount Received(in H B/L Ship)+Amount Received(Not in H B/L Ship)-Amount Paid(in H B/L Ship)-Amount Paid(Not in H B/L Ship)</inlineHelpText>
    <label>BALANCE AT CLOSING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>