force-app/main/default/objects/BANK_BALANCE__c/fields/BALANCE_AT_START__c.field-meta.xml
<CustomField>
    <fullName>BALANCE_AT_START__c</fullName>
    <inlineHelpText>Put the balance of Local Currency Bank Account on the Start Date for Balance Checking.</inlineHelpText>
    <label>BALANCE AT START</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>