force-app/main/default/objects/BANK_BALANCE__c/fields/BALANCE_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>BALANCE_START_DATE__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>BALANCE START DATE</label>
    <required>true</required>
    <type>Date</type>
</CustomField>