force-app/main/default/objects/BANK_BALANCE__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>BANK BAL.</relationshipLabel>
    <relationshipName>BANK_BAL</relationshipName>
    <type>Lookup</type>
</CustomField>