force-app/main/default/objects/BANK_BALANCE__c/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <label>DESCRIPTION</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>