force-app/main/default/objects/BANK_BALANCE__c/fields/LINK_TO_PAYMENT_REPORT__c.field-meta.xml
<CustomField>
    <fullName>LINK_TO_PAYMENT_REPORT__c</fullName>
    <inlineHelpText>Link to the Payment Report which provides amount and detail information.</inlineHelpText>
    <label>LINK TO PAYMENT REPORT</label>
    <type>Url</type>
</CustomField>