force-app/main/default/objects/BANK_BALANCE__c/fields/LINK_TO_RECEIPTANCE_REPORT__c.field-meta.xml
<CustomField>
    <fullName>LINK_TO_RECEIPTANCE_REPORT__c</fullName>
    <inlineHelpText>Link to the Receiptance Report from customers which provides amount and detail information.</inlineHelpText>
    <label>LINK TO RECEIPTANCE REPORT</label>
    <type>Url</type>
</CustomField>