force-app/main/default/objects/BANK_BALANCE__c/fields/RollupBankAmountPaidLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupBankAmountPaidLocal__c</fullName>
    <label>ROLLUP BANK AMOUNT PAID(LOCAL)</label>
    <summarizedField>BankBalBankTran__c.AmountPaidLocalForBCBal__c</summarizedField>
    <summaryForeignKey>BankBalBankTran__c.BankBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>