force-app/main/default/objects/BANK_BALANCE__c/fields/RollupBankAmountPaidUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupBankAmountPaidUSD__c</fullName>
    <label>ROLLUP BANK AMOUNT PAID(USD)</label>
    <summarizedField>BankBalBankTran__c.AmountPaidUSDForBCBal__c</summarizedField>
    <summaryForeignKey>BankBalBankTran__c.BankBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>