force-app/main/default/objects/BANK_BALANCE__c/fields/RollupBankAmountReceivedLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupBankAmountReceivedLocal__c</fullName>
    <label>ROLLUP BANK AMOUNT RECEIVED(LOCAL)</label>
    <summarizedField>BankBalBankTran__c.AmountReceivedLocalForBCBal__c</summarizedField>
    <summaryForeignKey>BankBalBankTran__c.BankBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>