force-app/main/default/objects/BANK_BALANCE__c/fields/RollupBankAmountReceivedUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupBankAmountReceivedUSD__c</fullName>
    <label>ROLLUP BANK AMOUNT RECEIVED(USD)</label>
    <summarizedField>BankBalBankTran__c.AmountReceivedUSDForBCBal__c</summarizedField>
    <summaryForeignKey>BankBalBankTran__c.BankBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>