force-app/main/default/objects/BANK_BALANCE__c/fields/RollupCashAmountPaidLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupCashAmountPaidLocal__c</fullName>
    <label>ROLLUP CASH AMOUNT PAID(LOCAL)</label>
    <summarizedField>CashBankBal__c.AmountPaidLocalForBCBal__c</summarizedField>
    <summaryForeignKey>CashBankBal__c.BankBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>