force-app/main/default/objects/BANK_BALANCE__c/fields/RollupCashAmountPaidUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupCashAmountPaidUSD__c</fullName>
    <label>ROLLUP CASH AMOUNT PAID(USD)</label>
    <summarizedField>CashBankBal__c.AmountPaidUSDForBCBal__c</summarizedField>
    <summaryForeignKey>CashBankBal__c.BankBalanceID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>