force-app/main/default/objects/BANK_BALANCE__c/recordTypes/LOCAL_BANK_ACCOUNT.recordType-meta.xml
<RecordType>
    <fullName>LOCAL_BANK_ACCOUNT</fullName>
    <active>true</active>
    <label>LOCAL BANK ACCOUNT</label>
</RecordType>