force-app/main/default/objects/BANK_BALANCE__c/recordTypes/USD_BANK_ACCOUNT.recordType-meta.xml
<RecordType>
    <fullName>USD_BANK_ACCOUNT</fullName>
    <active>true</active>
    <label>USD BANK ACCOUNT</label>
</RecordType>