force-app/main/default/objects/BANK_BALANCE__c/validationRules/CLOSING_DATE_LATER_THAN_START_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>CLOSING_DATE_LATER_THAN_START_DATE</fullName>
    <active>true</active>
    <errorConditionFormula>BALANCE_START_DATE__c  &gt;  CLOSING_DATE__c</errorConditionFormula>
    <errorDisplayField>CLOSING_DATE__c</errorDisplayField>
    <errorMessage>BALANCE CLOSING DATE MUST BE LATER THAN BALANCE START DATE.</errorMessage>
</ValidationRule>